<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/wprowadzNazweEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/wprowadzObecneSaldoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_balance"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/currency_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textDirection="@string/currency_choose"/>

    <Switch
        android:id="@+id/masterAccountSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_as_default" />

    <Button
        android:id="@+id/confirmAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>